# otis

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac  rebar.config
debian/: changelog  control  copyright  rules
doc/: README.md
doc/reference-manual/: README.md  op-all.md  op-any.md  op-eq.md  op-goto.md  op-log.md  op-match.md  op-not.md  op-response.md  op-set.md  op-subst.md
ebin/: Makefile.am  otis.app.in.in  otis.appup.in
include/: Makefile.am  otis.hrl
priv/: Makefile.am  sys.config
priv/template/: all.erl  any.erl  any_last.erl  eq_cookie.erl  eq_header.erl  eq_query.erl  eq_request_ipaddr.erl  eq_request_ipmask.erl  eq_request_iprange.erl  eq_request_port.erl  eq_request_string.erl  eq_rheader.erl  eq_user.erl  goto.erl  hook_if_abort.erl  hook_if_continue.erl  hook_if_final.erl  hook_rule_init.erl  log.erl  match_cookie.erl  match_header.erl  match_query.erl  match_request.erl  match_rheader.erl  match_user.erl  nohook_if_abort.erl  nohook_if_continue.erl  nohook_if_final.erl  nohook_rule_init.erl  not.erl  otis_reqrw_engine.erl  redirect.erl  response.erl  rule.erl  sample.erl  set_cookie.erl  set_header.erl  set_query.erl  set_request_ipaddr.erl  set_request_port.erl  (+11 more)
src/: Emakefile.in.in  Makefile.am  otis.app.src  otis.erl  otis_app.erl  otis_codegen.hrl  otis_conf.erl  otis_geoip.erl  otis_sup.erl  otis_tpl.erl  otis_utils.erl  otis_var.erl
src/api/: otis_yaws_mod_rewrite.erl
src/ops/: otis_op_all.erl  otis_op_any.erl  otis_op_eq.erl  otis_op_goto.erl  otis_op_log.erl  otis_op_match.erl  otis_op_not.erl  otis_op_response.erl  otis_op_set.erl  otis_op_subst.erl
src/types/: otis_type_int.erl  otis_type_ipaddr.erl  otis_type_ipmask.erl  otis_type_iprange.erl  otis_type_port.erl
testsuite/: Makefile.am  cover_to_html.sh  dialyzer.in  etest.in  mod_coverage.escript  prepare-testsuite-for-rebar  template.erl  template.pl
testsuite/data/conf/: COVERED-MODS  empty.data  empty.pattern  invalid_keyword.data  invalid_root.data  invalid_yaml.data  malformed_consts.data  malformed_global_consts.data  malformed_global_hooks.data  malformed_global_hooks.pattern  malformed_hooks.data  malformed_hooks.pattern  malformed_rule.data  option_config.pattern  unrecognized_global_consts.data  unrecognized_global_hooks.data  unrecognized_keyword.data  unrecognized_keyword.pattern  unrecognized_rule_keyword.data  unsupported_op.data  unsupported_op.pattern
testsuite/data/rewrites/: COVERED-MODS  all.data  all.pattern  any.data  any.pattern  eq_AUTH_PASSWD.data  eq_AUTH_PASSWD.pattern  eq_AUTH_USER.data  eq_AUTH_USER.pattern  eq_CLIENT_IP.data  eq_CLIENT_IP.pattern  eq_PATH.data  eq_PATH.pattern  eq_SERVER_PORT.data  eq_SERVER_PORT.pattern  eq_VHOST_NAME.data  eq_VHOST_NAME.pattern  eq_cookie.data  eq_cookie.pattern  eq_header.data  eq_header.pattern  eq_query.data  eq_query.pattern  eq_rheader.data  eq_rheader.pattern  example_for_yaws_ml.data  example_for_yaws_ml.pattern  goto_first.data  goto_first.pattern  goto_index.data  goto_index.pattern  goto_last.data  goto_last.pattern  goto_next.data  goto_next.pattern  goto_previous.data  goto_previous.pattern  goto_rule.data  goto_rule.pattern  invalid_set_ro_CLIENT_PORT.data  (+73 more)
testsuite/data/types/: COVERED-MODS  int.pattern  ipaddr.pattern  ipmask.pattern  iprange.pattern  port.pattern
testsuite/data/vars/: expansion.pattern  filter_escape_uri.pattern  folded_vars.pattern  invalid_vars.pattern  no_var.pattern  simple_vars.pattern
testsuite/data/yakaz/: CLEANFILES  COVERED-MODS  yakaz.conf  yakaz.pattern
