privdir = $(ERLANG_INSTALL_LIB_DIR_otis)/priv

nobase_dist_priv_DATA = sys.config					\
			template/otis_reqrw_engine.erl			\
			template/rule.erl				\
			template/log.erl				\
			template/eq_request_string.erl			\
			template/eq_request_port.erl			\
			template/eq_user.erl				\
			template/eq_query.erl				\
			template/eq_header.erl				\
			template/eq_cookie.erl				\
			template/match_request.erl			\
			template/match_user.erl				\
			template/match_query.erl			\
			template/match_header.erl			\
			template/match_cookie.erl			\
			template/set_request_string.erl			\
			template/set_request_port.erl			\
			template/set_user_string.erl			\
			template/set_user_int.erl			\
			template/set_user_port.erl			\
			template/set_query.erl				\
			template/set_header.erl				\
			template/set_cookie.erl				\
			template/subst_request.erl			\
			template/subst_user.erl				\
			template/subst_query.erl			\
			template/subst_header.erl			\
			template/subst_cookie.erl			\
			template/not.erl				\
			template/all.erl				\
			template/any.erl				\
			template/any_last.erl				\
			template/goto.erl				\
			template/response.erl				\
			template/redirect.erl				\
			template/nohook_rule_init.erl			\
			template/nohook_if_continue.erl			\
			template/nohook_if_final.erl			\
			template/nohook_if_abort.erl			\
			template/hook_rule_init.erl			\
			template/hook_if_continue.erl			\
			template/hook_if_final.erl			\
			template/hook_if_abort.erl
